--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,8 +38,7 @@
 }
 
 .logo {
-  padding-top: 2px;
-  display: flexbox;
+  padding-top: 5px;
 }
 
 .logo-icon {
@@ -49,6 +48,7 @@
 
 .logo-name {
   padding-top: 7px;
+  font-family: 'Lemon Tuesday', sans-serif;
 }
 
 .plus-icon {
@@ -62,4 +62,71 @@
 
 .info-modal {
   transform: scale(1.1);
+}
+
+.nav-bar {
+  background-color: #282c34;
+  color: white;
+}
+
+/* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5); */
+/* border-radius: 10px; */
+/* box-shadow:
+    0 0 6px 2px gray,
+    0 0 8px 4px gray,
+    0 0 10px 6px gray; */
+
+.landing-div {
+  position: relative
+}
+
+.landing-bg {
+  background-image: url("https://i0.heartyhosting.com/www.surfer.com/wp-content/uploads/2019/12/laura.jpg?resize=1200%2C630");
+  background-size: 100% 100%;
+  margin-top: 0.25in;
+  height: 7in;
+  filter: blur(3px);
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  opacity: .8;
+  border-style: solid;
+}
+
+.landing-welcome {
+  float: left;
+  margin-top: 2.5in;
+  margin-left: 0.5in;
+  width: 30%;
+  position: relative;
+}
+
+.welcome-to {
+  font-family: 'Lemon Tuesday', sans-serif;
+  transform: scale(2);
+  text-shadow: 2px 2px 8px black;
+}
+
+.blurb {
+  text-align: left;
+  margin-top: 0.9in;
+  margin-left: 0.4in;
+  transform: scale(0.9);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-shadow: 2px 2px 2px black;
+}
+
+.landing-login {
+  float: left;
+  margin-top: 2.5in;
+  margin-left: 0.5in;
+  width: 30%;
+  position: relative;
+}
+
+.landing-create {
+  float: right;
+  margin-top: 2.5in;
+  margin-left: 0.5in;
+  position: relative;
 }
