--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,7 +89,7 @@
   width: 100%;
   position: absolute;
   z-index: -1;
-  opacity: .8;
+  /* opacity: .8; */
   border-style: solid;
 }
 
@@ -132,6 +132,7 @@
   border-radius: 10px;
   /* box-shadow: 0px 0px 6px 2px black; */
   border-style: inset;
+  border-color: white;
   /* border-width: 2px; */
 }
 
@@ -143,8 +144,26 @@
 
 .landing-create {
   float: right;
-  transform: scale(1.2);
-  top: 3.8in;
-  right: 1.2in;
+  transform: scale(1.3);
+  margin-top: -2.2in;
+  margin-right: 1.2in;
   position: relative;
+}
+
+.sg-div {
+  position: sticky;
+  padding: 0.1in;
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 1px;
+  border-color: white;
+}
+
+.sg-span {
+  width: 100%;
+}
+
+.sg-img {
+  margin: -0.4in;
+  transform: scale(0.5);
 }
