--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,6 +78,8 @@
 
 .landing-div {
   position: relative;
+  /* display: block; */
+  /* height: 7in; */
 }
 
 .landing-bg-img {
@@ -90,8 +92,8 @@
   z-index: -1;
   /* opacity: .8; */
   border-style: solid;
+  display: block;
   position: absolute;
-  /* display: block; */
 }
 
 .border-div {
@@ -156,10 +158,26 @@
 }
 
 .landing-cards {
-  /* float: left; */
-  clear: left;
-  /* display: block; */
+  top: 2in;
+  left: 0.4in;
   position: relative;
+  float: left;
+  clear: both;
+  justify-content: flex-start;
+}
+
+.landing-card {
+  box-shadow: 0px 0px 15px 5px black;
+  transform: scale(1.2);
+  margin: 0.5in;
+  position: absolute;
+  height: 3in;
+}
+
+.footer {
+  width: screen;
+  position: relative;
+  top: 12in;
 }
 
 .sg-div {
