--- a/client/src/App.css
+++ b/client/src/App.css
@@ -222,7 +222,7 @@
 }
 
 .personal-post-img {
-  transform: scale(1.12);
+  /* transform: scale(0.5); */
   overflow: hidden;
 }
 
@@ -259,4 +259,10 @@
 
 .prof-col4 {
   margin-left: 15px;
+}
+
+.bio {
+  transform: scale(1.3);
+  margin-left: 4in;
+  margin-top: -1in;
 }
